# jirassic-park

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  clock.py  config.py  db.py  main.py
backend/app/api/: __init__.py  _helpers.py  admin.py  auth.py  boards.py  filters.py  issues.py  projects.py  search.py  sprints.py  users.py
backend/app/api/jira_compat/: __init__.py  errors.py  ids.py  router.py  shapes.py
backend/app/mcp/: __init__.py  server.py  tools.py  tools_atlassian_aliases.py  tools_impl.py
backend/app/models/: __init__.py  activity.py  attachment.py  board.py  comment.py  custom_field.py  issue.py  label.py  link.py  project.py  saved_filter.py  sprint.py  user.py  watcher.py  workflow.py
backend/app/schemas/: __init__.py  api.py
backend/app/seed/: __init__.py  builder.py  populate.py
backend/app/seed/content/: __init__.py  comment_threads.py  debt_issues.py  plat_issues.py  scrum_issues.py  sup_issues.py
backend/app/seed/fixtures/: boards.yaml  custom_fields.yaml  labels.yaml  links.yaml  projects.yaml  saved_filters.yaml  sprints.yaml  teams.yaml  (+2 more)
backend/app/services/: __init__.py  boards.py  history.py  issues.py  permissions.py  projects.py  search.py  sprints.py  workflows.py
backend/scripts/: agent_demo.py  demo.sh  mcp_demo.py
backend/tests/: conftest.py  test_audit_log.py  test_clock.py  test_jira_compat.py  test_jql_parser.py  test_mentions.py  test_permissions.py  test_reset_wal_regression.py  test_surface_parity.py  test_workflow_state_machine.py
(+63 files in other folders)
